--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/pereval
-spring.datasource.username= postgres
-spring.datasource.password= Everlast
+
+spring.datasource.url = ${FSTR_DB_HOST}:${FSTR_DB_PORT}/pereval
+spring.datasource.username = ${FSTR_DB_LOGIN}
+spring.datasource.password = ${FSTR_DB_PASS}
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto= update
